--- a/Proyecto1/Makefile
+++ b/Proyecto1/Makefile
@@ -1,12 +1,20 @@
 all: ejecutarMenu
+
+#Compila menu
 compilarMenu: menu.c
 	gcc menu.c -o menu
 
+#Compila buscador
 compilarBuscador: buscador.c
-	gcc buscador.c buscador
+	gcc buscador.c -o buscador
 
-ejecutarMenu: compilarMenu menu
+#Crear terminal y compila y ejecuta menu
+ejecutarMenu: compilarMenu crearTerminal menu
 	./menu
+
+#Compila buscador, crea una nueva terminal y ejecuta buscador en esa terminal
+crearTerminal: compilarBuscador
+	gnome-terminal -- ./buscador
 
 ejecutarBuscador: compilarBuscador buscador
 	./buscador
